# spotify-to-ytmusic

./: .gitignore  README.md  pyproject.toml
src/spotify_to_ytmusic/: __main__.py  authorize.py
